--- a/src/pure3d/static/css/style.css
+++ b/src/pure3d/static/css/style.css
@@ -125,12 +125,13 @@
 div.caption {
   display: flex;
   flex-flow: column nowrap;
-  border-radius: 0.8em;
+  border-radius: 0.4em;
   border-style: solid;
   border-width: 0.2em;
   border-color: var(--caption-border);
+  margin-bottom: 1em;
 }
 
-div.caption {
+div.caption.active {
   border-color: var(--caption-border-active);
 }
