bits and pieces

--- a/pilots/voyager-story/templates/voyager.html
+++ b/pilots/voyager-story/templates/voyager.html
@@ -7,7 +7,7 @@
   </head>
 <body>
   <voyager-story
-      root="{{root}}" resourceRoot="{{resourceRoot}}" document="{{scene}}">
+      root="{{root}}" resourceroot="{{resourceRoot}}" document="{{scene}}">
   </voyager-story>
 </body>
 </html>
