additions to test pilot app

--- a/pilots/testing-users/templates/app.html
+++ b/pilots/testing-users/templates/app.html
@@ -10,7 +10,9 @@
 			{{user| safe}}
 			<br>
 			<br>
-			<!-- {{userN}} logged in--> {{user_text}}
-
+			<!-- {{userN}} logged in--> {{user_text}} 
+			<br>
+			<a href= {{projects_link}}>Projects</a>
+			{% block content %} {% endblock %}
 	</body>
 </html
