--- a/pilots/test-pure3d/src/templates/projects.html
+++ b/pilots/test-pure3d/src/templates/projects.html
@@ -1,5 +1,6 @@
 {% extends 'index.html'%}
 
-{% block content %} {{projects_list | safe}} {% endblock %}
+{% block content %} {{projects_list | safe}} 
+{% endblock %}
 
 
