--- a/pilots/test-pure3d/src/templates/users.html
+++ b/pilots/test-pure3d/src/templates/users.html
@@ -1,5 +1,5 @@
 {% extends 'index.html'%}
 
-{% block content %} {{user_roles | safe}}{% endblock %}
+{% block content %} <h2>User Roles</h2>{{user_roles | safe}}{% endblock %}
 
 
