--- a/pilots/test-pure3d/src/templates/projects.html
+++ b/pilots/test-pure3d/src/templates/projects.html
@@ -1,15 +1,4 @@
-{% extends 'index.html'%}
+{% extends 'index.html'%} {% block content %}
+<h2>Projects</h2>
 
-{% block content %} 
-<h2> Project Roles </h2>
-
-{{projects_list | safe}} 
-{{projectStatus | safe}}
-<br>
-<h2> Edition Roles </h2> 
-{{editions_list | safe}} 
-{{editionStatus | safe}}
-
-{% endblock %}
-
-
+{{projects_list | safe}} {% endblock %}
