--- a/pilots/test-pure3d/src/templates/index.html
+++ b/pilots/test-pure3d/src/templates/index.html
@@ -1,10 +1,3 @@
-{% extends 'layout.html'%} {% block users %} {{user| safe}}
-<br />
-<br />
-<!-- {{userN}} logged in-->
-{{user_text}}
-<br />
-
-{% endblock %}
+{% extends 'layout.html'%}
 
 {% block content %} <h2>This is the Pure3D home page</h2>{% endblock %}
