--- a/pilots/test-pure3d/src/templates/editions.html
+++ b/pilots/test-pure3d/src/templates/editions.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html'%} {% block content %}
 {{ project_user | safe }}
 <h2>Editions</h2>
-{{ editions_list | safe }} 
+{{ all_editions | safe }} 
 {% endblock %}
