--- a/pilots/test-pure3d/src/templates/projects.html
+++ b/pilots/test-pure3d/src/templates/projects.html
@@ -1,4 +1,4 @@
 {% extends 'layout.html'%} {% block content %}
 <h2>Projects</h2>
 
-{{projects_list | safe}} {% endblock %}
+{{all_projects | safe}} {% endblock %}
