--- a/pilots/test-pure3d/src/templates/layout.html
+++ b/pilots/test-pure3d/src/templates/layout.html
@@ -8,6 +8,7 @@
       type="text/css"
       href="{{ url_for('static',filename='style.css')}}"
     />
+    {% block head %} {% endblock %}
   </head>
 
   <body>
