--- a/pilots/test-pure3d/src/templates/users.html
+++ b/pilots/test-pure3d/src/templates/users.html
@@ -1,22 +1,25 @@
 {% extends 'layout.html'%} 
 
-<head>
+{% block head %} 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-</head>
+{% endblock %}
+
 
 {% block content %}
-<body>
-  <h1>User Roles</h1>
-  <table>
-    <thead>
-      <tr>
-        <th>Username</th>
-        <th>Role</th>
-      </tr>
-    </thead>
-    <tbody>
-      {{users_html | safe}}
-    </tbody>
-  </table>
+<h1>User Roles</h1>
+<form method="POST">
+<table>
+  <thead>
+    <tr>
+      <th>Username</th>
+      <th>Role</th>
+    </tr>
+  </thead>
+  <tbody>
+    {{user_role | safe}}
+  </tbody>
+</table>
+</form>
+
 {% endblock %}
