--- a/pilots/test-pure3d/src/templates/index.html
+++ b/pilots/test-pure3d/src/templates/index.html
@@ -1,3 +1,3 @@
 {% extends 'layout.html'%}
 
-{% block content %} <h2>This is the Pure3D home page</h2>{% endblock %}
+{% block content %} <!-- {{username}} logged in--><h2>This is the Pure3D home page</h2>{% endblock %}
